[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/point.gd" type="Script" id=1]
[ext_resource path="res://sprites/dot_normal_10.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.2228

[node name="point" type="Sprite"]
position = Vector2( -0.276947, -0.84079 )
texture = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
